<resources>
    <string name="app_name">Homework02</string>
    <string name="create_new">Create New</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="display_contact">Display Contact</string>
    <string name="finish">Finish</string>

    <string name="action_settings">Settings</string>
    <string name="input_first">First</string>
    <string name="input_last">Last</string>
    <string name="input_company">Company</string>
    <string name="input_phone">Phone</string>
    <string name="input_email">Email</string>
    <string name="input_URL">URL</string>
    <string name="input_address">Address</string>
    <string name="input_Birthday">Birthday</string>
    <string name="input_fb_URL">Facebook Profile URL</string>
    <string name="input_twitterURL">Twitter Profile URL</string>
    <string name="input_skype">Skype</string>
    <string name="input_nickname">Nickname</string>
    <string name="input_youtube">Youtube Channel</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="show_company">Company :</string>
    <string name="show_email">Email :</string>
    <string name="show_url">Personal URL :</string>
    <string name="show_youtube">Youtube Channel :</string>
    <string name="show_fburl">Facebook URL :</string>
    <string name="show_twitter">Twitter URL :</string>
    <string name="show_skype">Skype :</string>
    <string name="show_address">Address :</string>
</resources>
